--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,46 @@
-name: Build Workflow
+name: Java CI with Maven
 
 on:
   push:
-    branches: [ development ]
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-          server-id: github
-          settings-path: ${{ github.workspace }}
-
-      - name: Build with Maven
-        run: |
-          mvn -B package --file pom.xml
-          mkdir artifact
-          mv bundle/target/Adv*.jar artifact/
-          mv velocity/target/Adv*.jar artifact/
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: AdvancedBan
-          path: artifact
+    - uses: actions/checkout@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+    - name: Cache Maven packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    - name: Build projects
+      run: mvn -B package --file pom.xml
+    - run: mkdir staging && cp target/*.jar staging
+    - uses: actions/upload-artifact@v1
+      with:
+        name: Nukkit
+        path: staging
+    # 生成信息
+    - name: Get Short SHA
+      id: vars
+      run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+    - name: Format ChangeLog
+      id: get-changelog
+      if: success() && github.event_name == 'push' && github.repository == 'MemoriesOfTime/Nukkit-MOT' && contains(github.ref_name, 'master')
+      run: echo "changelog=${{ github.event.commits[0].message }}" >> $GITHUB_OUTPUT
+    - name: Get Time
+      id: time
+      uses: nanzm/get-time-action@v1.1
+      if: github.repository == 'MemoriesOfTime/Nukkit-MOT' && contains(github.ref_name, 'master')
+      with:
+        timeZone: 8
+        format: 'YYYY/MM/DD-HH:mm:ss'
