--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
         java-version: 1.8
 
     - name: Test with Maven
-      run: mvn -B test --file pom.xml
+      run: mvn -X -B test --file pom.xml
